<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
android:background="@color/colorWhite"
    tools:context="com.animator_abhi.gcethackathon.Login.StudentRegister">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp"
        android:weightSum="1">

        <android.support.design.widget.TextInputLayout
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="16dp">

            <EditText
                android:id="@+id/Student_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Student_Name" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="70dp">

            <EditText
                android:id="@+id/Student_College"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Student_College" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="135dp">

            <EditText
                android:id="@+id/Student_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Student_Email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="189dp">

            <EditText
                android:id="@+id/Student_Interested_In"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Student_Interested_In" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/Student_Register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/colorPrimary"

                android:text="@string/Student_Register"
                android:textColor="@color/colorWhite"
                tools:layout_editor_absoluteY="365dp" />

            <EditText
                android:id="@+id/Student_Idea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Student_Idea_StartUp" />


        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/stu"
            android:scaleType="centerCrop"/>

    </LinearLayout>


</LinearLayout>
