<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context="com.animator_abhi.gcethackathon.Login.InvestorRegister">

    <TextView
        android:id="@+id/startup_founder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/founder_name"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />


    <TextView
        android:id="@+id/email"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/email"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />


    <TextView
        android:id="@+id/Company_name"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/company_name"
        android:inputType="textMultiLine"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />


    <TextView
        android:id="@+id/website"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="http://google.com"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/project"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint=" PROJECTS : "
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/md_keylines"
            android:layout_marginLeft="@dimen/md_keylines"
            android:layout_marginRight="@dimen/md_keylines"
            android:foreground="?attr/selectableItemBackground">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="160dp">

                <ImageView
                    android:id="@+id/card_image"
                    android:layout_width="160dp"
                    android:layout_height="@dimen/card_image_height"
                    android:src="@drawable/download" />

                <TextView
                    android:id="@+id/card_title"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/card_title_height"
                    android:layout_alignBottom="@+id/card_image"
                    android:layout_marginBottom="76dp"
                    android:layout_marginLeft="@dimen/md_keylines"
                    android:layout_marginStart="53dp"
                    android:layout_toEndOf="@+id/card_image"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="#F7AF28"
                    tools:text="Weather" />


                <TextView
                    android:id="@+id/card_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/card_image"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="12dp"
                    android:layout_marginLeft="@dimen/md_keylines"
                    android:layout_marginRight="@dimen/md_keylines"
                    android:ellipsize="end"
                    android:textSize="@dimen/article_subheading"
                    tools:text="Description" />
                <TextView
                    android:id="@+id/duration"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/card_title_height"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:text="10 DAYS"
                    android:layout_above="@+id/card_text"
                    android:layout_alignStart="@+id/card_title" />


            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <Button
        android:id="@+id/addproject"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="Publish new Project"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
</LinearLayout>
