<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="1">


    <android.support.v7.widget.CardView

        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/md_keylines"
        android:layout_marginLeft="@dimen/md_keylines"
        android:layout_marginRight="@dimen/md_keylines"
        android:foreground="?attr/selectableItemBackground"
        android:layout_weight="0.08">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_toEndOf="@+id/card_image"
                android:id="@+id/linearLayout">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/email"
                        android:textSize="18dp"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/email"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

                    <TextView
                        android:id="@+id/student_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/Student_Name"
                        android:textSize="18dp"

                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

                    <TextView
                        android:id="@+id/project"
                        android:textSize="18dp"
android:visibility="gone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="Applied Project"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

                    <TextView
                        android:id="@+id/interest"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="18dp"
                        android:hint="Interest"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

                    <TextView
                        android:id="@+id/Student_College"
                        android:textSize="18dp"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/Student_College"
                        android:inputType="textMultiLine"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
                </LinearLayout>
                </LinearLayout>

            <ImageView
                android:id="@+id/card_image"
                android:layout_width="160dp"
                android:scaleType="center"
                android:layout_height="@dimen/card_image_height"
                android:src="@drawable/download"
                android:layout_alignBottom="@+id/linearLayout" />

            <TextView
                android:id="@+id/card_title"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginLeft="@dimen/md_keylines"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="#F7AF28"
                android:text="Weather"
                android:layout_below="@id/card_image"
                android:layout_marginEnd="11dp" />


            <TextView
                android:id="@+id/card_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/md_keylines"
                android:layout_marginRight="@dimen/md_keylines"
                android:ellipsize="end"
                android:textSize="@dimen/article_subheading"
                android:text="Description"
                android:layout_below="@+id/card_title"
                android:layout_alignParentStart="true" />


        </RelativeLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>